Fix: css ajustement - hauteur interligne  - ajout de media querry pour  meilleur  transiton mobile => desktop

--- a/p3/sass/Pages/_menu.scss
+++ b/p3/sass/Pages/_menu.scss
@@ -8,7 +8,7 @@ div.menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
-    margin: 0 auto;
+    margin: 2rem auto;
     padding: 0 2rem;
     max-width: 800px;
 
@@ -16,7 +16,9 @@ div.menu {
       list-style-type: none;
       grid-column: 1/3;
       font-size: 2rem;
+      margin-bottom: 1rem;
     }
+
     & li:nth-child(even) {
       grid-column: 3;
       text-align: right;
