--- a/p3/sass/styles.scss
+++ b/p3/sass/styles.scss
@@ -67,7 +67,7 @@ $text: #fdca57;
 
 @media (min-width: 600px) {
   html {
-    font-size: 100%;
+    font-size: 80%;
   }
   .menus {
     margin: auto;
@@ -75,5 +75,10 @@ $text: #fdca57;
     & img {
       width: 400px;
     }
+  }
+}
+@media (min-width: 720px) {
+  html {
+    font-size: 100%;
   }
 }
